--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/css.css">
+    <link rel="stylesheet" href="./src/css/css.css">
 </head>
 <body>
     <div class="wrapper">
@@ -36,6 +36,6 @@
         </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="/src/index.js"></script>
+<script src="./src/index.js"></script>
 </body>
 </html>
